--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ test:
     - npm install
     - python3 -m pip install jinja2
     - ./generate.sh
-    - npm run test --coverage
+    - npm run test
   tags:
     - NodeJS
     - NPM
