--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@cedric-demongivert/gl-tool-math",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A math library for webgl.",
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage",
     "doc": "esdoc",
-    "dev": "set NODE_ENV=development | webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "build": "set NODE_ENV=production | webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "dev": "cross-env NODE_ENV=development webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "preversion": "generate && npm install && npm test",
     "version": "generate && npm run build && npm run doc && git add --all",
     "postversion": "git push && git push --tags"
@@ -30,11 +30,13 @@
     "babel-jest": "^23.6.0",
     "babel-plugin-groundskeeper-willie": "^1.3.2",
     "babel-plugin-module-resolver": "^3.1.1",
+    "cross-env": "^5.2.0",
     "esdoc": "^1.1.0",
     "esdoc-ecmascript-proposal-plugin": "^1.0.0",
     "esdoc-external-ecmascript-plugin": "^1.0.0",
     "esdoc-standard-plugin": "^1.0.0",
     "jest": "^23.6.0",
+    "laravel-mix": "^2.1.14",
     "regenerator-runtime": "^0.12.1"
   }
 }
