--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
     [
-      "@babel/preset-env",
+      "babel-preset-env",
       {
         "targets": "> 0.25%, ie 11"
       }
@@ -13,19 +13,11 @@
       {
         "root": ["."],
         "alias": {
-          "@library": "./src",
+          "@library": "./src"
         },
         "extensions": [
           ".js", ".json", ".jsx"
         ]
-      }
-    ],
-    [
-      "babel-plugin-groundskeeper-willie",
-      {
-          "removeConsole":  false,
-          "removeDebugger": true,
-          "removePragma":   true
       }
     ]
   ]
