--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cedric-demongivert/gl-tool-math",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A math library for webgl.",
   "main": "index.js",
   "scripts": {
@@ -24,11 +24,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.1.5",
-    "@babel/preset-env": "^7.1.5",
-    "babel-core": "7.0.0-bridge.0",
+    "babel": "^6.23.0",
     "babel-jest": "^23.6.0",
-    "babel-plugin-groundskeeper-willie": "^1.3.2",
     "babel-plugin-module-resolver": "^3.1.1",
     "cross-env": "^5.2.0",
     "esdoc": "^1.1.0",
@@ -38,5 +35,8 @@
     "jest": "^23.6.0",
     "laravel-mix": "^2.1.14",
     "regenerator-runtime": "^0.12.1"
+  },
+  "dependencies": {
+    "babel-preset-env": "^1.7.0"
   }
 }
