--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^23.6.0",
+    "babel-preset-env": "^1.7.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "cross-env": "^5.2.0",
     "esdoc": "^1.1.0",
@@ -38,6 +39,5 @@
     "regenerator-runtime": "^0.12.1"
   },
   "dependencies": {
-    "babel-preset-env": "^1.7.0"
   }
 }
