--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "module": "commonjs",
+    "module": "es6",
     "types": ["jest", "node"],
     "alwaysStrict": true,
     "moduleResolution": "node",
     "declaration": true,
-    "declarationDir": "./dist/types"
+    "declarationDir": "./dist/types",
+    "outDir": "./dist/src"
   },
   "include": [
-      "src/ts/**/*"
+      "src/**/*"
   ],
   "exclude": [
       "node_modules",
