--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "laravel-mix": "^5.0.0",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.2",
+    "babel-jest": "^24.9.0",
     "typedoc": "^0.14.2",
     "typedoc-webpack-plugin": "^1.1.4",
     "webpack": "^4.33.0"
   },
   "dependencies": {
-    "babel-jest": "^24.9.0"
   }
 }
