--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cedric-demongivert/gl-tool-math",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "A math library for webgl.",
   "main": "./index.js",
   "types": "./types/index.d.ts",
@@ -25,16 +25,15 @@
   "devDependencies": {
     "@types/jest": "^24.0.12",
     "@types/node": "^12.0.0",
+    "babel-jest": "^24.9.0",
     "cross-env": "^5.2.0",
     "jest": "^24.7.1",
     "laravel-mix": "^5.0.0",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.2",
-    "babel-jest": "^24.9.0",
     "typedoc": "^0.14.2",
     "typedoc-webpack-plugin": "^1.1.4",
     "webpack": "^4.33.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
