--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "@cedric-demongivert/gl-tool-math",
-  "version": "0.6.2",
+  "version": "0.8.7",
   "description": "A math library for webgl.",
   "main": "./index.js",
   "types": "./types/index.d.ts",
   "scripts": {
     "test": "jest --coverage",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "preversion": "npm install && npm test",
-    "version": "npm run build && git add --all",
-    "postversion": "git push && git push --tags"
+    "build": "cross-env ./generate && typedoc && cross-env npx mix",
+    "preversion": "npm install",
+    "version": "npm run build && npm test && git add --all",
+    "postversion": "git push && git push --tags",
+    "push": "yarn run build && npm publish ./distribution --access public",
+    "patch": "yarn version --patch && npm run publish",
+    "minor": "yarn version --minor && npm run publish",
+    "major": "yarn version --major && npm run publish"
   },
   "repository": "https://gitlab.cedric-demongivert.com/gl-tool/glkit-math.git",
   "author": "Cédric DEMONGIVERT <cedric.demongivert@gmail.com>",
@@ -23,17 +27,17 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^24.0.12",
-    "@types/node": "^12.0.0",
-    "babel-jest": "^24.9.0",
-    "cross-env": "^5.2.0",
-    "jest": "^24.7.1",
-    "laravel-mix": "^5.0.0",
-    "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.2",
-    "typedoc": "^0.14.2",
-    "typedoc-webpack-plugin": "^1.1.4",
-    "webpack": "^4.33.0"
+    "@types/jest": "^27.0.3",
+    "@types/node": "^17.0.4",
+    "babel-jest": "^27.4.5",
+    "cross-env": "^7.0.3",
+    "jest": "^27.4.5",
+    "laravel-mix": "^6.0.39",
+    "ts-jest": "^27.1.2",
+    "ts-loader": "^9.2.6",
+    "typedoc": "^0.22.10",
+    "typescript": "^4.5.4",
+    "webpack": "^5.65.0"
   },
   "dependencies": {}
 }
