--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preversion": "npm install",
     "version": "npm run build && npm test && git add --all",
     "postversion": "git push && git push --tags",
-    "push": "yarn run build && npm publish ./distribution --access public",
+    "push": "yarn run build && npm publish ./dist --access public",
     "patch": "yarn version --patch && npm run publish",
     "minor": "yarn version --minor && npm run publish",
     "major": "yarn version --major && npm run publish"
