--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cedric-demongivert/gl-tool-math",
-  "version": "0.8.8",
+  "version": "0.8.9",
   "description": "A math library for webgl.",
   "main": "./index.js",
   "types": "./types/index.d.ts",
@@ -11,9 +11,9 @@
     "version": "npm run build && npm test && git add --all",
     "postversion": "git push && git push --tags",
     "push": "yarn run build && npm publish ./dist --access public",
-    "patch": "yarn version --patch && npm run publish",
-    "minor": "yarn version --minor && npm run publish",
-    "major": "yarn version --major && npm run publish"
+    "patch": "yarn version --patch && npm publish ./dist --access public",
+    "minor": "yarn version --minor && npm publish ./dist --access public",
+    "major": "yarn version --major && npm publish ./dist --access public"
   },
   "repository": "https://gitlab.cedric-demongivert.com/gl-tool/glkit-math.git",
   "author": "Cédric DEMONGIVERT <cedric.demongivert@gmail.com>",
